fixed settings css with overlapping class name

--- a/euphony/static/css/settings.css
+++ b/euphony/static/css/settings.css
@@ -107,7 +107,7 @@
     left: 500px;
 }
 
-.info{
+.settings_account_info{
     padding-top: 80px;
     margin-bottom: 10px;
     position: absolute;
